--- a/landing_styles.css
+++ b/landing_styles.css
@@ -179,10 +179,10 @@ nav {
 
 #CTA-btn {
   cursor: pointer;
-  display: flex;
+  display: inline-flex;
+  align-items: center;
   justify-content: center;
   text-align: center;
-  padding: auto;
   transition: all 0.1s ease-in-out;
 }
 
