--- a/rentals.css
+++ b/rentals.css
@@ -179,7 +179,6 @@
 }
 
 .bg-third {
-  filter: var(--db);
   width: 33.333%;
   margin: 0;
   object-fit: cover;
@@ -236,7 +235,7 @@
   vertical-align: middle;
   background-color: #e5e5e5;
   width: 50%;
-  height: 50%;
+  height: auto;
   border-radius: 10px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
@@ -259,7 +258,8 @@
 .desc {
   display: flex;
   justify-content: center;
-  padding: 0.2rem auto 0.5rem auto;
+  padding-top: 0.2rem;
+  padding-bottom: 0.5rem;
 }
 
 summary {
