--- a/rentals.css
+++ b/rentals.css
@@ -203,7 +203,7 @@
       rgba(20, 33, 62, 0.7),
       rgba(20, 33, 62, 0.7)
     ),
-    url(resources/images/i4.jpeg);
+    url(https://hips.hearstapps.com/hmg-prod/images/2019-ferrari-488-pista-107-1528476280.jpg?crop=0.712xw:0.777xh;0.154xw,0.186xh&resize=1200:*);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 40%;
@@ -214,7 +214,7 @@
       rgba(20, 33, 62, 0.7),
       rgba(20, 33, 62, 0.7)
     ),
-    url(resources/images/i5.jpeg);
+    url(https://media.ed.edmunds-media.com/dodge/challenger/2022/oem/2022_dodge_challenger_coupe_gt_fq_oem_1_1280.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 20%;
@@ -249,6 +249,7 @@
   color: #e5e5e5;
   margin: auto;
   position: relative;
+  bottom: 1rem;
   width: 80%;
   height: 60%;
   background-color: #363636;
@@ -258,8 +259,6 @@
 .desc {
   display: flex;
   justify-content: center;
-  padding-top: 0.2rem;
-  padding-bottom: 0.5rem;
 }
 
 summary {
