--- a/tracks.css
+++ b/tracks.css
@@ -7,10 +7,9 @@
 .grid-wrapper {
   height: 100%;
   display: grid;
-  height: 180vh;
 
   grid-template-columns: 1fr;
-  grid-template-rows: 5rem 40rem 1fr 20rem 5rem;
+  grid-template-rows: 5rem 40rem 20rem 20rem 5rem;
 
   grid-template-areas:
     "nav"
