--- a/rentals.css
+++ b/rentals.css
@@ -56,8 +56,8 @@
   vertical-align: center;
   width: 20rem;
   height: 18rem;
-  margin-left: 4rem;
-  margin-right: 4rem;
+  margin-left: 3%;
+  margin-right: 3%;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   text-align: center;
   background-repeat: no-repeat;
