--- a/style.css
+++ b/style.css
@@ -115,3 +115,27 @@ footer > a {
 footer > a:hover {
   transform: scale(0.95);
 }
+
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1.8s;
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
+.carHidden {
+  opacity: 0;
+  filter: blur(6px);
+  transition: all 0.5s;
+}
+
+.showCar {
+  opacity: 1;
+  filter: blur(0);
+}
