--- a/landing_styles.css
+++ b/landing_styles.css
@@ -115,6 +115,7 @@ nav {
   background-color: var(--db);
   color: white;
   box-shadow: 0 3px 15px rgb(0 0 0 / 0.2);
+  transform: scale(1.1);
 }
 .quote {
   padding-top: 5%;
