feat: contact page translations

--- a/contact.css
+++ b/contact.css
@@ -25,7 +25,7 @@
       rgba(20, 33, 62, 0.7),
       rgba(20, 33, 62, 0.7)
     ),
-    url(https://www.acedrive.sg/wp-content/uploads/2022/07/luxury-sports-exotic-car-rental-in-singapore.jpg);
+    url(https://i.ytimg.com/vi/5BWDVl6mWKM/maxresdefault.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 20%;
